syntax = "proto3";
option java_multiple_files = true;
package com.grpcserver.grpcserver;
option java_package = "com.grpcserver.grpcserver";

// The greeting service definition.
service GrpcserverService {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}


// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
